# ced

./: .gitignore  Cargo.toml  README.md
docs/: change.md  meta.md
src/: command.rs  error.rs  help.txt  lib.rs  models.rs  page.rs  processor.rs  test.rs  utils.rs  value.rs  virtual_data.rs
src/cli/: bin.rs  command.rs  command_loop.rs  help.rs  mod.rs  parse.rs  preset.rs  utils.rs
src/help/: Makefile  all.txt  bin.txt  binary.txt  description.txt  version.txt
src/help/raw/: 00_header  01_version  02_help  03_import  03_import_raw  040_execute  04_export  04_write  05_print  05_print_cell  05_print_row  06_print_column  07_create  08_add_row  09_add_column  10_edit  11_edit_row  11_edit_row_multiple  12_edit_column  13_delete_row  14_delete_column  15_rename_column  16_move  17_move_column  18_limit  18_limit_preset  19_schema  20_schema_export  21_schema_init  22_undo  23_redo  24_history  32_quit
