[package]
name = "ced"
version = "0.1.7"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["csv", "cli", "text-processing"]
categories = ["command-line-utilities", "text-processing"]
description = "Dead easy csv editor"
homepage = "https://github.com/simhyeon/ced"
repository = "https://github.com/simhyeon/ced"
readme = "README.md"

[lib]
path="src/lib.rs"

[[bin]]
name="ced"
path="src/cli/bin.rs"

[features]
cli = []

[dependencies]
dcsv = { version = "0.1.2"}
